--- a/public/404.html
+++ b/public/404.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>It seems as thought you've wandered backstage and a good magician never reveals his secerets (404)</title>
+  <title>(404)</title>
   <style>
   body {
-    background-color: #EFEFEF;
+    background-image: url("assets/404curtains.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
@@ -34,7 +36,7 @@
     width: 33em;
     margin: 0 auto 1em;
     padding: 1em 0;
-    background-color: #F7F7F7;
+    background-color: #EFEFEF;
     border: 1px solid #CCC;
     border-right-color: #999;
     border-bottom-color: #999;
@@ -50,9 +52,7 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>It seems as thought you've wandered backstage and a good magician never reveals his secerets...</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
