moves trick and post nav buttons into dropdown nav menu items

--- a/public/404.html
+++ b/public/404.html
@@ -15,6 +15,7 @@
   div.dialog {
     width: 25em;
     margin: 4em auto 0 auto;
+    margin-top: 350px;
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -52,7 +53,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>It seems as thought you've wandered backstage and a good magician never reveals his secerets...</h1>
+    <h1>404</h1>
+    <p>It appears as though you've wandered backstage and a good magician never reveals his secerets...</p>
   </div>
 </body>
 </html>
